# AqlaarTeleologyStudio

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: launch.json
ReferenceDocs/: DataSources.xlsx  moda_dump.jsonl  moda_spider.py
ReferenceDocs/General/: 474 - Order to Cash_0.xlsx
ReferenceDocs/Industries/: 280 Accounts Payable and Expense Reimbursement.xlsx  586 - Accounts Payable and Expense Reimbursement - Rapid Performance Assessment.xlsx
apps/web/: package-lock.json  package.json  playwright.config.ts
data/baselines/: .industry_manifest.json  c2m.ttl  h2r.ttl  o2c.ttl  p2p.ttl  t2r.ttl
data/profiles/: _default.json  consumer_electronics.json  consumer_products.json  downstream_petroleum.json  education.json  generic.json  health_insurance_payor.json  healthcare_provider.json  life_sciences.json  property_casualty_insurance.json  retail.json  telecom.json  upstream_petroleum.json  utilities.json
data/thesaurus/: alignments.ttl  apqc.ttl  apqc_consumer_electronics.ttl  apqc_consumer_products.ttl  apqc_downstream_petroleum.ttl  apqc_education.ttl  apqc_health_insurance_payor.ttl  apqc_healthcare_provider.ttl  apqc_life_sciences.ttl  apqc_property_casualty_insurance.ttl  apqc_retail.ttl  apqc_upstream_petroleum.ttl  apqc_utilities.ttl  etom.ttl  sid.ttl
docs/: DemoScript.md  OPERATIONS.md  PRODUCT_ARCHIVE.md  PRODUCT_BACKLOG.md  README.md  SPECS.md  Specs.md  TODO-implementation-plan.md  UserManual.md  manual-test-script.md  user_manual.md
infra/keycloak/: ots-realm.json
services/api/: Dockerfile  agents_router.py  db.py  (+25 more)
(+273 files in other folders)
