[project]
name = "ots"
version = "0.1.0"
description = "Ontology-Teleology Studio — ingestion agent and tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openpyxl>=3.1",
    "pdfplumber>=0.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rdflib>=7.0",
    "pyshacl>=0.29",
    "typer>=0.12",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.scripts]
ots-ingest = "services.ingest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services"]
